--- a/index after login.html
+++ b/index after login.html
@@ -806,7 +806,7 @@
     <!-- section rides-register-daily /-->
 
     <!-- section Latest-rentals -->
-    <section class="Latest-rentals">
+    <section class="Latest-rentals mt-5">
         <div class="carlatest">
             <div class="lastercar1">
                 <h3 class="address">Latest rentals</h3>
@@ -820,7 +820,7 @@
                         <div class="img-car">
                             <img src="img/car1.jpg" alt="car1" class="img1-car">
                             <span class="day-car">$35/day</span>
-                            <div class="imgcar1"><img src="img/client-1.jpg" alt="client-1" class="img2-car"></div>
+                            <div class="imgcar1"><i class="fa-regular fa-user slider-top-luxury" ></i></div>
                         </div>
 
                         <div class="rentals-car2">
@@ -851,7 +851,7 @@
                     <div class="col-lg-4 w-30 col-md- col-sm-12">
                         <div class="img-car">
                             <img src="img/car1.jpg" alt="car1" class="img1-car">
-                            <div class="imgcar1"><img src="img/client-1.jpg" alt="client-1" class="img2-car"></div>
+                            <div class="imgcar1"><i class="fa-regular fa-user slider-top-luxury" ></i></div>
                             <span class="day-car">$25/day</span>
                         </div>
 
@@ -885,7 +885,7 @@
                     <div class="col-lg-4 w-30 col-md- col-sm-12">
                         <div class="img-car">
                             <img src="img/car1.jpg" alt="car1" class="img1-car">
-                            <div class="imgcar1"><img src="img/client-1.jpg" alt="client-1" class="img2-car"></div>
+                            <div class="imgcar1"><i class="fa-regular fa-user slider-top-luxury" ></i></div>
                             <span class="day-car">$35/day</span>
                         </div>
 
@@ -922,7 +922,7 @@
     <!-- section Latest-rentals /-->
 
     <!-- section Looking-for-ride-->
-    <section class="Looking-for-ride">
+    <section class="Looking-for-ride mb-5">
 
         <div class="space no-top">
 
@@ -940,7 +940,7 @@
 
                             <li class="forride">
                                 <div class="rider-avatar">
-                                    <img src="img/rider-1.jpg" alt="">
+                                    <i class="fa-regular fa-user slider-top "></i>
                                 </div>
                                 <div class="rider-meta">
                                     <a href="#" title="">3rd of October, 2017</a>
@@ -954,7 +954,7 @@
 
                             <li class="forride">
                                 <div class="rider-avatar">
-                                    <img src="img/rider-2.jpg" alt="">
+                                    <i class="fa-regular fa-user slider-top "></i>
                                 </div>
                                 <div class="rider-meta">
                                     <a href="#" title="">5rd of October, 2017</a>
@@ -968,7 +968,7 @@
 
                             <li class="forride">
                                 <div class="rider-avatar">
-                                    <img src="img/rider-3.jpg" alt="">
+                                    <i class="fa-regular fa-user slider-top "></i>
                                 </div>
                                 <div class="rider-meta">
                                     <a href="#" title="">7rd of October, 2017</a>
@@ -982,7 +982,7 @@
 
                             <li class="forride">
                                 <div class="rider-avatar">
-                                    <img src="img/rider-4.jpg" alt="">
+                                    <i class="fa-regular fa-user slider-top "></i>
                                 </div>
                                 <div class="rider-meta">
                                     <a href="#" title="">9rd of October, 2017</a>
@@ -1008,7 +1008,7 @@
 
                             <li class="spareseat">
                                 <div class="rider-avatar">
-                                    <img src="img/rider-5.jpg" alt="">
+                                    <i class="fa-regular fa-user slider-top "></i>
                                 </div>
                                 <div class="rider-meta">
                                     <a href="#" title="">10rd of October, 2017</a>
@@ -1022,7 +1022,7 @@
 
                             <li class="spareseat">
                                 <div class="rider-avatar">
-                                    <img src="img/rider-6.jpg" alt="">
+                                    <i class="fa-regular fa-user slider-top "></i>
                                 </div>
                                 <div class="rider-meta">
                                     <a href="#" title="">12rd of October, 2017</a>
@@ -1036,7 +1036,7 @@
 
                             <li class="spareseat">
                                 <div class="rider-avatar">
-                                    <img src="img/rider-7.jpg" alt="">
+                                    <i class="fa-regular fa-user slider-top "></i>
                                 </div>
                                 <div class="rider-meta">
                                     <a href="#" title="">15rd of October, 2017</a>
@@ -1050,7 +1050,7 @@
 
                             <li class="spareseat">
                                 <div class="rider-avatar">
-                                    <img src="img/rider-8.jpg" alt="">
+                                    <i class="fa-regular fa-user slider-top "></i>
                                 </div>
                                 <div class="rider-meta">
                                     <a href="#" title="">17rd of October, 2017</a>
