--- a/index.html
+++ b/index.html
@@ -749,7 +749,7 @@
                         <div class="img-car">
                             <img src="img/car1.jpg" alt="car1" class="img1-car">
                             <span class="day-car">$35/day</span>
-                            <div class="imgcar1"><img src="img/client-1.jpg" alt="client-1" class="img2-car"></div>
+                            <div class="imgcar1"><i class="fa-regular fa-user slider-top-luxury" ></i></div>
                         </div>
 
                         <div class="rentals-car2">
@@ -780,7 +780,7 @@
                     <div class="col-lg-4 w-30 col-md- col-sm-12">
                         <div class="img-car">
                             <img src="img/car1.jpg" alt="car1" class="img1-car">
-                            <div class="imgcar1"><img src="img/client-1.jpg" alt="client-1" class="img2-car"></div>
+                            <div class="imgcar1"><i class="fa-regular fa-user slider-top-luxury" ></i></div>
                             <span class="day-car">$25/day</span>
                         </div>
 
@@ -814,7 +814,7 @@
                     <div class="col-lg-4 w-30 col-md- col-sm-12">
                         <div class="img-car">
                             <img src="img/car1.jpg" alt="car1" class="img1-car">
-                            <div class="imgcar1"><img src="img/client-1.jpg" alt="client-1" class="img2-car"></div>
+                            <div class="imgcar1"><i class="fa-regular fa-user slider-top-luxury" ></i></div>
                             <span class="day-car">$35/day</span>
                         </div>
 
@@ -869,7 +869,7 @@
 
                             <li class="forride">
                                 <div class="rider-avatar">
-                                    <img src="img/rider-1.jpg" alt="">
+                                    <i class="fa-regular fa-user slider-top "></i>
                                 </div>
                                 <div class="rider-meta">
                                     <a href="#" title="">3rd of October, 2017</a>
@@ -883,7 +883,7 @@
 
                             <li class="forride">
                                 <div class="rider-avatar">
-                                    <img src="img/rider-2.jpg" alt="">
+                                    <i class="fa-regular fa-user slider-top "></i>
                                 </div>
                                 <div class="rider-meta">
                                     <a href="#" title="">5rd of October, 2017</a>
@@ -897,7 +897,7 @@
 
                             <li class="forride">
                                 <div class="rider-avatar">
-                                    <img src="img/rider-3.jpg" alt="">
+                                    <i class="fa-regular fa-user slider-top "></i>
                                 </div>
                                 <div class="rider-meta">
                                     <a href="#" title="">7rd of October, 2017</a>
@@ -911,7 +911,7 @@
 
                             <li class="forride">
                                 <div class="rider-avatar">
-                                    <img src="img/rider-4.jpg" alt="">
+                                    <i class="fa-regular fa-user slider-top "></i>
                                 </div>
                                 <div class="rider-meta">
                                     <a href="#" title="">9rd of October, 2017</a>
@@ -937,7 +937,7 @@
 
                             <li class="spareseat">
                                 <div class="rider-avatar">
-                                    <img src="img/rider-5.jpg" alt="">
+                                    <i class="fa-regular fa-user slider-top "></i>
                                 </div>
                                 <div class="rider-meta">
                                     <a href="#" title="">10rd of October, 2017</a>
@@ -951,7 +951,7 @@
 
                             <li class="spareseat">
                                 <div class="rider-avatar">
-                                    <img src="img/rider-6.jpg" alt="">
+                                    <i class="fa-regular fa-user slider-top "></i>
                                 </div>
                                 <div class="rider-meta">
                                     <a href="#" title="">12rd of October, 2017</a>
@@ -965,7 +965,7 @@
 
                             <li class="spareseat">
                                 <div class="rider-avatar">
-                                    <img src="img/rider-7.jpg" alt="">
+                                    <i class="fa-regular fa-user slider-top "></i>
                                 </div>
                                 <div class="rider-meta">
                                     <a href="#" title="">15rd of October, 2017</a>
@@ -979,7 +979,7 @@
 
                             <li class="spareseat">
                                 <div class="rider-avatar">
-                                    <img src="img/rider-8.jpg" alt="">
+                                    <i class="fa-regular fa-user slider-top "></i>
                                 </div>
                                 <div class="rider-meta">
                                     <a href="#" title="">17rd of October, 2017</a>
@@ -1157,8 +1157,6 @@
                 <div class="phone-whatsapp mt-3 mb-3">
 
                     <h2 class="h2ourpage"><a href="#">+20 100 885 4383</a></h2>
-                    <h2 class="h2ourpage"><a href="#">+20 101 555 8628</a></h2>
-                    <h2 class="h2ourpage"><a href="#">+20 111 128 9180⁩</a></h2>
                     <h2 class="h2ourpage"><a href="#">+20 0115 214 8220</a></h2>
 
                 </div>
