--- a/submit-car-for-rent.html
+++ b/submit-car-for-rent.html
@@ -116,12 +116,16 @@
             margin-top: 2%;
         }
 
-        .sectionselect {
-            width: 40%;
+        .customs-selects {
+            width: 99%;
         }
 
         .customm-selects {
-            width: 90%;
+            width: 99%;
+        }
+
+        input {
+            width: 100% !important;
         }
 
         .sectionselect select,
@@ -200,7 +204,6 @@
             outline: none;
             border: none;
             padding: 9px 16px;
-            width: 93%;
             color: #a98989;
             font-size: 16px;
         }
@@ -218,7 +221,7 @@
             padding: 13px 20px;
             border-radius: 5px;
             resize: none;
-            width: 50%;
+            width: 95%;
             color: #a98989;
         }
     </style>
@@ -414,7 +417,7 @@
     </div>
     <!-- subhead -->
 
-    <section class="sumbit-car-for">
+    <section class="sumbit-car-for mt-5">
         <div class="sumbit-cars">
             <div class="sumbits-car">
 
@@ -466,7 +469,7 @@
 
                     </div>
 
-                    <div class="filters-metas">
+                    <div class="filters-metas mt-5">
                         <span class="this-span">fule type:</span>
 
                         <div class="row">
@@ -508,7 +511,7 @@
 
                     </div>
 
-                    <div class="Filter-Meta">
+                    <div class="Filter-Meta mt-5 border-top border-info text-center">
                         <span class="this-span">style :</span>
 
                         <ul class="row">
@@ -704,11 +707,11 @@
 
                 </div>
 
-                <div class="sumbit-control">
+                <div class="sumbit-control mt-5">
                     <!-- enging select -->
                     <div class="row">
 
-                        <div class="col-lg-4 col-sm-6">
+                        <div class="col-lg-4 col-sm-6 w-100">
                             <span class="this-span">Make:</span>
                             <div class="customs-selects">
                                 <select class="form-select bg-primary bg-gradient bg-opacity-25"
@@ -729,17 +732,13 @@
                             </div>
 
                             <div class="col-lg-4">
-                                <p class="this-spans">Plate #</p>
-                                <div class="customm-selects">
+                                <span class="this-span">Plate #</span>
                                     <input type="text" class="inputs-hear">
-                                </div>
                             </div>
 
                             <div class="col-lg-4">
-                                <p class="this-spans">Reg. Exp. Date:</p>
-                                <div class="customm-selects">
+                                <span class="this-span">Reg. Exp. Date:</span>
                                     <input type="text" class="inputs-hear">
-                                </div>
                             </div>
 
                         </div>
@@ -750,12 +749,12 @@
 
                 <div class="row">
 
-                    <div class="col-lg-6 w-100">
+                    <div class="col-lg-6 w-100 mt-5">
                         <p>Car description:</p>
                         <textarea cla cols="30" rows="4"></textarea>
                     </div>
 
-                    <div class="row col-lg-6 align-items-center">
+                    <div class="row col-lg-6 align-items-center mt-5">
 
                         <div class="col-lg-6">
                             <!-- enging select -->
