--- a/bootstrap.html
+++ b/bootstrap.html
@@ -855,7 +855,7 @@
         </div>
 
     </section>
-<!-- 
+
     <div class="filter-meta">
 
         <span class="this-span">style :</span>
@@ -1214,7 +1214,7 @@
             <span class="visually-hidden">Next</span>
         </button>
 
-    </div> -->
+    </div>
 
     <select class="form-select bg-primary bg-gradient bg-opacity-25" aria-label="Default select example">
         <option selected>Open this select menu</option>
